New MMR matches version with user ids
