# backend/controllers/users_controller.go
@@ -10,7 +10,38 @@ import (
 
 type UsersController struct{}
 
-//	@BasePath	/api/v1/users
+// ListUsers godoc
+//
+//	@Summary		List users
+//	@Description	Lists all users
+//	@Tags 			Users
+//	@Produce		json
+//	@Success		200	{object}	[]view.UserDetails
+//	@Router			/v1/users [get]
+func (uc UsersController) ListUsers(c *gin.Context) {
+	// Initialize user repository
+	userRepo := repos.NewUserRepository(database.DB)
+
+	// Fetch all users
+	users, err := userRepo.ListUsers()
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": "Failed to fetch users"})
+		return
+	}
+
+	if len(users) == 0 {
+		c.JSON(http.StatusOK, []view.UserDetails{})
+		return
+	}
+
+	var userDetails []view.UserDetails
+
+	for _, user := range users {
+		userDetails = append(userDetails, view.UserDetailsViewFromModel(*user))
+	}
+
+	c.JSON(http.StatusOK, userDetails)
+}
 
 // SearchUsers godoc
 //
@@ -20,7 +51,7 @@ type UsersController struct{}
 //	@Param			query	query	string	true	"Name to search for"
 //	@Produce		json
 //	@Success		200	{object}	[]view.UserDetails
-//	@Router			/search [get]
+//	@Router			/v1/users/search [get]
 func (uc UsersController) SearchUsers(c *gin.Context) {
 	// Initialize user repository
 	userRepo := repos.NewUserRepository(database.DB)
