# backend/docs/swagger.json
@@ -3,8 +3,9 @@
     "info": {
         "contact": {}
     },
+    "basePath": "/api",
     "paths": {
-        "/admin/recalculate": {
+        "/v1/admin/recalculate": {
             "post": {
                 "description": "Start recalculating matches",
                 "consumes": [
@@ -27,7 +28,7 @@
                 }
             }
         },
-        "/mmr/matches": {
+        "/v1/mmr/matches": {
             "get": {
                 "description": "Get all matches",
                 "produces": [
@@ -96,39 +97,7 @@
                 }
             }
         },
-        "/search": {
-            "get": {
-                "description": "Searches users by name",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Search users",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Name to search for",
-                        "name": "query",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/view.UserDetails"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/stats/leaderboard": {
+        "/v1/stats/leaderboard": {
             "get": {
                 "description": "Get leaderboard stats including wins, loses, and MMR of users",
                 "consumes": [
@@ -154,7 +123,7 @@
                 }
             }
         },
-        "/stats/player-history/{userId}": {
+        "/v1/stats/player-history/{userId}": {
             "get": {
                 "description": "Get player history including MMR and date",
                 "consumes": [
@@ -196,6 +165,130 @@
                             "items": {
                                 "$ref": "#/definitions/view.PlayerHistoryDetails"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users": {
+            "get": {
+                "description": "Lists all users",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "List users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/view.UserDetails"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/search": {
+            "get": {
+                "description": "Searches users by name",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Search users",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name to search for",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/view.UserDetails"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/v2/mmr/matches": {
+            "get": {
+                "description": "Get all matches",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Matches"
+                ],
+                "summary": "Get matches",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/view.MatchDetailsV2"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Submit a match for MMR calculation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Matches"
+                ],
+                "summary": "Submit a match",
+                "parameters": [
+                    {
+                        "description": "Match object",
+                        "name": "match",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/view.MatchV2"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "match submitted",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -257,6 +350,28 @@
                 }
             }
         },
+        "view.MatchDetailsV2": {
+            "type": "object",
+            "required": [
+                "date",
+                "team1",
+                "team2"
+            ],
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "mmrCalculations": {
+                    "$ref": "#/definitions/view.MatchMMRCalculationDetails"
+                },
+                "team1": {
+                    "$ref": "#/definitions/view.MatchTeamV2"
+                },
+                "team2": {
+                    "$ref": "#/definitions/view.MatchTeamV2"
+                }
+            }
+        },
         "view.MatchMMRCalculationDetails": {
             "type": "object",
             "required": [
@@ -303,6 +418,40 @@
                 },
                 "score": {
                     "type": "integer"
+                }
+            }
+        },
+        "view.MatchTeamV2": {
+            "type": "object",
+            "required": [
+                "member1",
+                "member2",
+                "score"
+            ],
+            "properties": {
+                "member1": {
+                    "type": "integer"
+                },
+                "member2": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "integer"
+                }
+            }
+        },
+        "view.MatchV2": {
+            "type": "object",
+            "required": [
+                "team1",
+                "team2"
+            ],
+            "properties": {
+                "team1": {
+                    "$ref": "#/definitions/view.MatchTeamV2"
+                },
+                "team2": {
+                    "$ref": "#/definitions/view.MatchTeamV2"
                 }
             }
         },
