# backend/models/match.go
@@ -10,6 +10,11 @@ type Match struct {
 	Team2 MatchTeam `json:"team2" binding:"required"`
 }
 
+type MatchV2 struct {
+	Team1 MatchTeamV2 `json:"team1" binding:"required"`
+	Team2 MatchTeamV2 `json:"team2" binding:"required"`
+}
+
 type MatchDetails struct {
 	Date            time.Time                   `json:"date" binding:"required"`
 	Team1           MatchTeam                   `json:"team1" binding:"required"`
@@ -17,10 +22,23 @@ type MatchDetails struct {
 	MMRCalculations *MatchMMRCalculationDetails `json:"mmrCalculations"`
 }
 
+type MatchDetailsV2 struct {
+	Date            time.Time                   `json:"date" binding:"required"`
+	Team1           MatchTeamV2                 `json:"team1" binding:"required"`
+	Team2           MatchTeamV2                 `json:"team2" binding:"required"`
+	MMRCalculations *MatchMMRCalculationDetails `json:"mmrCalculations"`
+}
+
 type MatchTeam struct {
 	Score   *uint  `json:"score" binding:"required"`
 	Member1 string `json:"member1" binding:"required"`
 	Member2 string `json:"member2" binding:"required"`
+}
+
+type MatchTeamV2 struct {
+	Score   *uint `json:"score" binding:"required"`
+	Member1 uint  `json:"member1" binding:"required"`
+	Member2 uint  `json:"member2" binding:"required"`
 }
 
 type MatchMMRCalculationDetails struct {
@@ -41,10 +59,27 @@ func MatchTeamViewFromModel(team models.Team) MatchTeam {
 	}
 }
 
+func MatchTeamV2ViewFromModel(team models.Team) MatchTeamV2 {
+	return MatchTeamV2{
+		Score:   &team.Score,
+		Member1: team.UserOne.ID,
+		Member2: team.UserTwo.ID,
+	}
+}
+
 func MatchDetailsViewFromModel(match models.Match) MatchDetails {
 	return MatchDetails{
 		Team1:           MatchTeamViewFromModel(match.TeamOne),
 		Team2:           MatchTeamViewFromModel(match.TeamTwo),
+		Date:            match.CreatedAt,
+		MMRCalculations: MatchMMRCalculationDetailsFromModel(match.MMRCalculations),
+	}
+}
+
+func MatchDetailsV2ViewFromModel(match models.Match) MatchDetailsV2 {
+	return MatchDetailsV2{
+		Team1:           MatchTeamV2ViewFromModel(match.TeamOne),
+		Team2:           MatchTeamV2ViewFromModel(match.TeamTwo),
 		Date:            match.CreatedAt,
 		MMRCalculations: MatchMMRCalculationDetailsFromModel(match.MMRCalculations),
 	}
